Fix PrimaryButton overflow on transform issue

--- a/src/styles/tailwind-custom.css
+++ b/src/styles/tailwind-custom.css
@@ -161,3 +161,10 @@ div[aria-label='animation'] {
     transform: translateY(-100%);
   }
 }
+
+/* Primary button transform fix */
+
+.primary-button {
+  clip-path: content-box;
+  -webkit-clip-path: content-box;
+}
